--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
+    "i18next": "^25.4.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-i18next": "^15.7.3",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.2",
     "tailwindcss": "^3.4.10",
