--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
-# Production environment variables
+# Production environment variables - Frontend only mode
+REACT_APP_FRONTEND_ONLY=true
 REACT_APP_API_URL=https://upaj-flask-backend-liart.vercel.app/api
