--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-# Production environment variables - Frontend only mode
-REACT_APP_FRONTEND_ONLY=true
-REACT_APP_API_URL=https://upaj-flask-backend-liart.vercel.app/api
+# Production environment variables - Connected to Railway Backend
+REACT_APP_FRONTEND_ONLY=false
+REACT_APP_API_URL=https://agrivision-backend-production.up.railway.app/api
