--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 # Production environment variables - Connected to Railway Backend
+# Updated: 2025-09-28 for Railway backend connection
 REACT_APP_FRONTEND_ONLY=false
 REACT_APP_API_URL=https://agrivision-backend-production.up.railway.app/api
